# c11_template

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  common.c  common.h  main.c  print_hello.c  print_hello.h  version.h  version.h.in
tests/: CMakeLists.txt  test_common.c  test_sample.c  unit_test.c  unit_test.h
